# w2nd_brain

./: README.md
version1/: app.py  pyproject.toml
version2/: main.py
version3/chrome_extension/: background.js  content_script.js  manifest.json
